--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is the first line in git repo</h1>
+    <h2>About Us</h2>
+    <p>Welcome to our website. We are committed to delivering high-quality web experiences using modern frameworks and tools.</p>
 </body>
 </html>
