--- a/index.html
+++ b/index.html
@@ -6,21 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
-
-    <h2>Contact Us</h2>
-<form>
-  <label for="name">Name:</label><br />
-  <input type="text" id="name" name="name"><br />
-  
-  <label for="email">Email:</label><br />
-  <input type="email" id="email" name="email"><br />
-  
-  <label for="message">Message:</label><br />
-  <textarea id="message" name="message"></textarea><br />
-  
-  <input type="submit" value="Submit">
-</form>
+      <h1>Welcome to My Webpage</h1>
 </body>
 </html>
