about-feature page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-      <h1>Welcome to My Webpage</h1>
+      
+    <h2>About Us</h2>
+    <p>Welcome to our website. We are committed to delivering high-quality web experiences using modern frameworks and tools.</p>
+
 </body>
 </html>
